[Add] dynamic filtering

--- a/second-web-app/index.html
+++ b/second-web-app/index.html
@@ -6,14 +6,10 @@
     </head>
     <body>
         <h1> ToDo APP</h1>
-        <input id="add-input" placeholder="Add your new ToDo">
+        <input id="add-input" placeholder="Filter ToDos">
         <button id="add_todo"> Add TODO </button>
-        <p>First</p>
-        <p>Second</p>
-        <p>Third</p>
-        <p>Fourth</p>
-        <p>Fifth</p>
         <button id="remove-all-todos"> Remove all ToDos </button>
+        <div id="todos-group"></div>
         <script src="todo-app.js"></script>
     </body>
 </html>
