[Fix] chage inputs and buttons

--- a/second-web-app/index.html
+++ b/second-web-app/index.html
@@ -6,10 +6,12 @@
     </head>
     <body>
         <h1> ToDo APP</h1>
-        <input id="add-input" placeholder="Filter ToDos">
+        <input id="add-todo" placeholder="Add ToDo">
         <button id="add_todo"> Add TODO </button>
-        <button id="remove-all-todos"> Remove all ToDos </button>
+        <input id="add-filter" placeholder="Filter ToDos">
+        
         <div id="todos-group"></div>
+        <button id="remove-all-todos"> Remove all ToDos </button>
         <script src="todo-app.js"></script>
     </body>
 </html>
