[Add] form and sends input to an array

--- a/second-web-app/index.html
+++ b/second-web-app/index.html
@@ -6,12 +6,12 @@
     </head>
     <body>
         <h1> ToDo APP</h1>
-        <input id="add-todo" placeholder="Add ToDo">
-        <button id="add_todo"> Add TODO </button>
         <input id="add-filter" placeholder="Filter ToDos">
-        
         <div id="todos-group"></div>
-        <button id="remove-all-todos"> Remove all ToDos </button>
+        <form id="addToDo-form">
+            <input type="text" placeholder="Add ToDo" name="todoInput">
+            <button id="add-todo-button"> Add ToDo </button>
+        </form>
         <script src="todo-app.js"></script>
     </body>
 </html>
