[Add] checkbox and filter

--- a/second-web-app/index.html
+++ b/second-web-app/index.html
@@ -7,6 +7,9 @@
     <body>
         <h1> ToDo APP</h1>
         <input id="add-filter" placeholder="Filter ToDos">
+        <label>
+            <input type="checkbox" id="checkTodos"> Hide Completed
+        </label>
         <div id="todos-group"></div>
         <form id="addToDo-form">
             <input type="text" placeholder="Add ToDo" name="todoInput">
