[Add] checkboxes to completed todos

--- a/second-web-app/index.html
+++ b/second-web-app/index.html
@@ -15,6 +15,7 @@
             <input type="text" placeholder="Add ToDo" name="todoInput">
             <button id="add-todo-button"> Add ToDo </button>
         </form>
+        <script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
         <script src="todo-functions.js"></script>
         <script src="todo-app.js"></script>
     </body>
