[Add] edit todo page and windows sync

--- a/second-web-app/edit-todo.html
+++ b/second-web-app/edit-todo.html
@@ -4,6 +4,10 @@
         <title>Edit ToDo</title>
     </head>
     <body>
-        this is an edit PAGE
+        <input id="input-title" placeholder="Title">
+        <textarea id="body-text" placeholder="Enter Objective"></textarea>
+        <button id="remove-button">Remove</button>
+        <script src="todo-functions.js"></script>
+        <script src="edit-todo.js"></script>
     </body>
 </html>
