[Add] working with dates and time

--- a/second-web-app/edit-todo.html
+++ b/second-web-app/edit-todo.html
@@ -5,8 +5,10 @@
     </head>
     <body>
         <input id="input-title" placeholder="Title">
+        <span id="status"></span>
         <textarea id="body-text" placeholder="Enter Objective"></textarea>
         <button id="remove-button">Remove</button>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
         <script src="todo-functions.js"></script>
         <script src="edit-todo.js"></script>
     </body>
