--- a/second-web-app/index.html
+++ b/second-web-app/index.html
@@ -16,6 +16,7 @@
             <button id="add-todo-button"> Add ToDo </button>
         </form>
         <script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
         <script src="todo-functions.js"></script>
         <script src="todo-app.js"></script>
     </body>
