--- a/hangman-app/index.html
+++ b/hangman-app/index.html
@@ -7,6 +7,7 @@
         <h1 id="puzzle"></h1>
         <h3 id="guesses"></h3>
         <h3 id="messages"></h3>
+        <script src="requests.js"></script>
         <script src="app.js"></script>
         <script src="hangman.js"></script>
     </body>
