--- a/hangman-app/index.html
+++ b/hangman-app/index.html
@@ -7,8 +7,9 @@
         <h1 id="puzzle"></h1>
         <h3 id="guesses"></h3>
         <h3 id="messages"></h3>
-        <script src="requests.js"></script>
+        <button id="reset">Reset</button>
         <script src="app.js"></script>
+        <script src="requests.js"></script>
         <script src="hangman.js"></script>
     </body>
 </html>
