--- a/hangman-app/index.html
+++ b/hangman-app/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <h1 id="puzzle"></h1>
-        <h3 id="guesses"></h3>
-        <h3 id="messages"></h3>
-        <button id="reset">Reset</button>
+        <div>
+            <h1 id="puzzle"></h1>
+            <h3 id="guesses"></h3>
+            <h3 id="messages"></h3>
+            <button id="reset">Reset</button>
+        </div>
+        
+        
         <script src="app.js"></script>
         <script src="requests.js"></script>
         <script src="hangman.js"></script>
